
2009-03-08  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up to feature #10155: Add controller switching for frontend editing

2009-03-08  Ingo Renner  <ingo@typo3.org>

	* Added unit tests for the caching framework database cache backend (backported from FLOW3) (part of #10614)
	* !!! Fixed issue #10614: update the caching framework to the latest version as in FLOW3

2009-03-08  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #9823: Save and close in t3editor closes without saving

2009-03-08  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #10565: Condition PIDinRootline did not work anymore
	* Follow-up to feature #10565: Fixed formatting in t3lib_matchCondition
	* Cleanup: Fixed ChangeLog
	* Cleanup: Changed formatting of INSTALL.txt

2009-03-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for feature #7970: fontstyle and fontsize should not use deprecated font tag

2009-03-07  Benjamin Mack  <benni@typo3.org>

	* Cleanup #10601: Move static dyntabmenu code in external file
	* Added feature #10565: Speedup & cleanup t3lib_matchCondition - make use of trimExplode

2009-03-07  Ingo Renner  <ingo@typo3.org>

	* Added unit tests for the caching framework cache manager (backported from FLOW3) (part of #10614)

2009-03-07  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to feature #2859: Added BACK_PATH to listUrl in list module

2009-03-06  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #5822: Indexed Search section menu includes pages with "hide in menu" flag (thanks to Andy Grunwald)

2009-03-06  Francois Suter  <francois@typo3.org>

	* Added feature #5466: Page selector for the list module (thanks to Christian Kuhn and Dmitry Pikhno)

2009-03-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10610: htmlArea RTE: Two errors in class.tx_rtehtmlarea_acronym.php (Thanks to Ursula Renziehausen).
	* Fixed bug #6947: RTEfullScreenWidth by default please !

2009-03-05  Benjamin Mack  <benni@typo3.org>
