@@ -10,6 +10,7 @@
 
 	* Added unit tests for the caching framework database cache backend (backported from FLOW3) (part of #10614)
 	* !!! Fixed issue #10614: update the caching framework to the latest version as in FLOW3
+	* Disabled a check in the DB caching backend for the existence of the specified caching table as it caused some problems
 
 2009-03-08  Tobias Liebig  <mail_typo3@etobi.de>
 
